force-app/main/default/objects/PObject__c/PObject__c.object-meta.xml
<CustomObject>
    <label>PObject</label>
    <nameField>
        <label>PObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>