force-app/main/default/objects/PObject__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <label>Price</label>
    <length>200</length>
    <type>Text</type>
</CustomField>