force-app/main/default/objects/PObject__c/fields/Satisfied__c.field-meta.xml
<CustomField>
    <fullName>Satisfied__c</fullName>
    <label>Satisfied</label>
    <length>200</length>
    <type>Text</type>
</CustomField>